# rust-trousers

./: Cargo.toml  README.md  shirtshirts.rs
src/: lib.rs
trousers-sys/: Cargo.toml  lib.rs  trousers.rs  tspi.rs
