[package]
name = "trousers-sys"
version = "0.0.0"
authors = ["Richard Wang <zhwang@live.com.au>"]
description = "Native bindings to the TrouSerS library"
repository = "https://github.com/rzhw/rust-trousers"
keywords = ["TrouSerS", "TPM", "TSS"]
license = "MIT"

[dependencies]
libc = "0.1"

[lib]
name = "trousers_sys"
path = "lib.rs"
